feat(report): add create categories and list endpoint
