# internal/handlers/issue_reports.go
@@ -165,3 +165,69 @@ func (h *IssueReportsHandler) UpdateUserIssueReportByID(c *gin.Context) {
 
 	c.JSON(http.StatusNoContent, nil)
 }
+
+// ListIssueCategories godoc
+// @Summary List issue categories
+// @Description Get a list of all issue categories
+// @Tags Issue Reports
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} entities.ListIssueCategoriesResp "List issue categories response"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
+// @Router /issue-categories [get]
+func (h *IssueReportsHandler) ListIssueCategories(c *gin.Context) {
+	ctx := c.Request.Context()
+	h.log.InfoWithID(ctx, "[Handler: ListIssueCategories] Called")
+
+	res, err := h.issueReportsService.ListIssueCategories(ctx)
+	if err != nil {
+		h.log.ErrorWithID(ctx, "[Handler: ListIssueCategories] Error listing issue categories", err)
+		utils.RespondWithError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, res)
+}
+
+// CreateAdminIssueCategory godoc
+// @Summary Create admin issue category
+// @Description Create a new admin issue category
+// @Tags Issue Reports
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 204
+// @Failure 400 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Invalid request parameters"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Unauthorized"
+// @Failure 401 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Permission denied"
+// @Failure 500 {object} gitlab_com_interview-simulation_interview-backend-server_internal_infras_app_error.AppError "Internal server error"
+// @Router /issue-categories [post]
+func (h *IssueReportsHandler) CreateAdminIssueCategory(c *gin.Context) {
+	ctx := c.Request.Context()
+	h.log.InfoWithID(ctx, "[Handler: CreateAdminIssueCategory] Called")
+
+	req := &entities.CreateAdminIssueCategoryReq{}
+	if err := h.validator.ValidateAndBind(c, req, "CreateAdminIssueCategory"); err != nil {
+		h.log.ErrorWithID(ctx, "[Handler: CreateAdminIssueCategory] Error binding JSON", err)
+		utils.RespondWithError(c, err)
+		return
+	}
+
+	ctx, err := h.authContext.ExtractAuthContext(c)
+	if err != nil {
+		h.log.ErrorWithID(ctx, "[Handler: CreateAdminIssueCategory] Error getting auth context", err)
+		utils.RespondWithError(c, err)
+		return
+	}
+
+	err = h.issueReportsService.CreateAdminIssueCategory(ctx, req)
+	if err != nil {
+		h.log.ErrorWithID(ctx, "[Handler: CreateAdminIssueCategory] Error creating admin issue category", err)
+		utils.RespondWithError(c, err)
+		return
+	}
+
+	c.JSON(http.StatusNoContent, nil)
+}
